# inverted_file_index

./: CMakeLists.txt  README.md  shard_map.txt
docs/: communication.md  design_foundation.md  grpc_design.md  ingest_design.md  major_components.md
tools/: generate.sh
